<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/coffee_brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/leftLogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logo_only"
            android:contentDescription="@string/left_logo" />

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cafe_finder"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"/>

        <ImageView
            android:id="@+id/rightLogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/right_logo"
            android:src="@drawable/logo_only" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_cafes"
            android:padding="6dp" />

        <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/filter_options"
            android:layout_marginStart="8dp"
            android:padding="10dp"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nearbyCafesRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/mapViewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_on_map"
        android:backgroundTint="@color/light_brown"/>

    <Button
        android:id="@+id/viewProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_profile"
        android:backgroundTint="@color/light_brown" />
</LinearLayout>
